tests/typechecker/pass/021-type-alias.hyg
type S = int;
let x: S = {
    type S2 = int;
    let y: S2 = 42;
    y
};
x: int
