tests/typechecker/fail/029-type-alias.hyg
type T = T;
let x: T = 42;
x
